...
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:text="AL"
                    android:textColor="@color/buttonTextColor" />

...
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:text="AK"
                    android:textColor="@color/buttonTextColor" />

...
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:text="AZ"
                    android:textColor="@color/buttonTextColor" />

...
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:text="AR"
                    android:textColor="@color/buttonTextColor" />

...
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:text="CA"
                    android:textColor="@color/buttonTextColor" />
            </TableRow>
...
                    android:background="@color/buttonColor"
                    android:tag="Colorado"
                    android:text="CO"
                    android:textColor="@color/buttonTextColor" />

...
                    android:background="@color/buttonColor"
                    android:tag="Connecticut"
                    android:text="CT"
                    android:textColor="@color/buttonTextColor" />

...
                    android:background="@color/buttonColor"
                    android:tag="Delaware"
                    android:text="DE"
                    android:textColor="@color/buttonTextColor" />

...
                    android:background="@color/buttonColor"
                    android:tag="Florida"
                    android:text="FL"
                    android:textColor="@color/buttonTextColor" />

...
                    android:background="@color/buttonColor"
                    android:tag="Georgia"
                    android:text="GA"
                    android:textColor="@color/buttonTextColor" />
            </TableRow>
...
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:text="HI"
                    android:textColor="@color/buttonTextColor" />

...
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:text="ID"
                    android:textColor="@color/buttonTextColor" />

...
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:text="IL"
                    android:textColor="@color/buttonTextColor" />

...
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:text="IN"
                    android:textColor="@color/buttonTextColor" />

...
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:text="IA"
                    android:textColor="@color/buttonTextColor" />
            </TableRow>
...
