<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".PreQuizFragment">

    <TextView
        android:id="@+id/NameHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="What's Your Name?"
        android:textColor="@color/hintColor"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColorHint="@color/hintColor"
        android:textColor="@color/textColor"
        android:hint="@string/player_name_hint"/>

    <TextView
        android:id="@+id/StartQuizHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Ready To Begin?"
        android:textColor="@color/textColor"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startQuizButton"
        android:backgroundTint="@color/buttonColor"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="Start Quiz" />

</LinearLayout>